--- a/formatstyles.css
+++ b/formatstyles.css
@@ -6,8 +6,14 @@
  table{border:2px solid black;}
          tr, td { border: 1px solid #990000;}
          tr:hover {background-color: #f5f5f5}
-         body { background-color: white; }
+         body { background-image: white; }
          body {font-size: 100%;}
+         img {
+            max-width: 100%;
+            height: auto;
+            margin: auto;
+            
+         }
         	h1 {
     color: black;
     font-family: arial;
@@ -19,7 +25,8 @@
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    width: 100%;
+    width: 100%
+    ;
 
 }
 
