--- a/layoutstyles.css
+++ b/layoutstyles.css
@@ -20,13 +20,13 @@ border: 2px solid #000000; /* black border */
  background-color: white;
  border-left: 3px white;
  
- height: 1200px;
+ height: 800px;
  padding: 1em;
 }
  #footer {
  	clear:both;
- 	height: 70px;
- 	background-color: lightblue;
+ 	height: 45px;
+ 	background-color: white;
  	border-top: 3px solid black;
  	text-align: center;
  }
