--- a/formatstyles.css
+++ b/formatstyles.css
@@ -3,6 +3,7 @@
  <style type ="text/css">
 
 
+
  table{border:2px solid black;}
          tr, td { border: 1px solid #990000;}
          tr:hover {background-color: #f5f5f5}
@@ -16,7 +17,7 @@
          }
         	h1 {
     color: black;
-    font-family: arial;
+    font-family: 'Roboto', sans-serif;
     font-size: 4em;}
 
    ul {
@@ -26,6 +27,7 @@
     overflow: hidden;
     background-color: #333;
     width: 100%
+    font :'Roboto', sans-serif;
     ;
 
 }
@@ -47,7 +49,7 @@ li a:hover {
 }
 
 body{
-	font: 100% Verdana, Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 ul {
     list-style-type: none;
