--- a/layoutstyles.css
+++ b/layoutstyles.css
@@ -17,10 +17,10 @@ border: 2px solid #000000; /* black border */
 
  }
 #content {
- background-color: white;
+ background-image: "cinema.jpg";
  border-left: 3px white;
  
- height: 800px;
+ height: 1000px;
  padding: 1em;
 }
  #footer {
