--- a/formatstyles.css
+++ b/formatstyles.css
@@ -7,18 +7,20 @@
  table{border:2px solid black;}
          tr, td { border: 1px solid #990000;}
          tr:hover {background-color: #f5f5f5}
-         body { background-image: white; }
+         body { background-color: black; }
          body {font-size: 100%;}
          img {
             max-width: 100%;
-            height: auto;
+            height: 100%;
             margin: auto;
             
          }
         	h1 {
     color: black;
     font-family: 'Roboto', sans-serif;
-    font-size: 4em;}
+    
+    font-size: 4em;
+    }
 
    ul {
     list-style-type: none;
@@ -28,6 +30,7 @@
     background-color: #333;
     width: 100%
     font :'Roboto', sans-serif;
+    
     ;
 
 }
@@ -74,13 +77,8 @@ li a {
 li a:hover {
     background-color: #111;
 }
-h2{
-    text-align:center;
-    font-family: 'Roboto', sans-serif;
 
-}
-content{
-    background-image: "cinema.jpg"
+
 }
 </style>
 </head>
