--- a/layoutstyles.css
+++ b/layoutstyles.css
@@ -8,24 +8,42 @@
 position: relative;
 border: 2px solid #000000; /* black border */
 }
-#header {
- height:200px;
- padding: .5em;
- background-color: darkblue;
- border-bottom: 1px solid black;
- text-align: center;
+
+
 
  }
-#content {
- background-image: "cinema.jpg";
- border-left: 3px white;
+.image {
  
- height: 1000px;
- padding: 1em;
+ border-left: 3px white;
+ background-color:black;
+ height: auto;
+ padding: 0.4em;
+ position:relative;
+ width:99%;
+
+
+}
+h2{
+	position:absolute;
+	top:100px;
+	left: 0;
+	width:100%;
+}
+h2 span{
+    color: white; 
+   font: bold 45px/86px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+   text-align:center;
+}
+h2 span.spacer{
+	padding: 0 5px;
 }
  #footer {
  	clear:both;
- 	height: 45px;
+ 	height: 35px;
  	background-color: white;
  	border-top: 3px solid black;
  	text-align: center;
