--- a/formatstyles.css
+++ b/formatstyles.css
@@ -3,6 +3,53 @@
  <style type ="text/css">
 
 
+#wrapper {
+ background: white;
+ width: 1260px;
+ margin: auto;
+position: relative;
+border: 2px solid #000000; /* black border */
+}
+
+
+
+ }
+.image {
+ 
+ border-left: 3px white;
+ background-color:black;
+ height: auto;
+ padding: 0.4em;
+ position:relative;
+ width:99%;
+
+
+}
+h2{
+    position:absolute;
+    top:100px;
+    left: 0;
+    width:100%;
+}
+h2 span{
+    color: white; 
+   font: bold 45px/86px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+   text-align:center;
+}
+h2 span.spacer{
+    padding: 0 5px;
+}
+ #footer {
+    clear:both;
+    height: 35px;
+    background-color: white;
+    border-top: 3px solid black;
+    text-align: center;
+ }
 
  table{border:2px solid black;}
          tr, td { border: 1px solid #990000;}
@@ -15,12 +62,8 @@
             margin: auto;
             
          }
-        	h1 {
-    color: black;
-    font-family: 'Roboto', sans-serif;
+        	
     
-    font-size: 4em;
-    }
 
    ul {
     list-style-type: none;
@@ -29,14 +72,15 @@
     overflow: hidden;
     background-color: #333;
     width: 100%
-    font :'Roboto', sans-serif;
-    
+    font: bold 45px/86px Helvetica, Sans-Serif; 
+
     ;
 
 }
 
 li {
     float: left
+    font: bold 45px/86px Helvetica, Sans-Serif; 
 }
 
 li a {
@@ -52,7 +96,7 @@ li a:hover {
 }
 
 body{
-	font-family: 'Roboto', sans-serif;
+	font: bold 15px/15px Helvetica, Sans-Serif; 
 }
 ul {
     list-style-type: none;
