--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 /* Catalogue page gallery formatting*/
+#banner{width: 100%;margin: auto;position: relative;}
 .movie_gallery{float: center;margin: 0 auto;width: 1366px;list-style: none;}
 .movie_gallery li{float: center;width: 200px;margin-right: 50px;margin-bottom: 10px;margin-top: 10px;margin-left: 10px;border: 2px solid white;}
 .movie_gallery li img{width: 200px;height: 300px;float: center;border: 1px solid white;}
@@ -6,7 +7,7 @@
 .movie_links a{border: 1px solid white;text-decoration: underline;}
 .catalogue_title h1{font: bold 30px/30px Helvetica, Sans-Serif;color: white;}
 
-#wrapper{background: white;width: 1366px;margin: auto;position: relative;border: 2px solid #000000; /* black border */}
+#wrapper{background: white;width: 100%;margin: auto;position: relative;border: 2px solid #000000; /* black border */}
 #footer {
     clear:both;
     height: 35px;
