--- a/formatstyles.css
+++ b/formatstyles.css
@@ -9,7 +9,7 @@
 
 #wrapper {
  background: white;
- width: 1260px;
+ width: 100%;
  margin: auto;
 position: relative;
 border: 2px solid #000000; /* black border */
