--- a/formatstyles.css
+++ b/formatstyles.css
@@ -62,8 +62,8 @@ h2 span.spacer{
          body { background-color: black; }
          body {font-size: 100%;}
          img {
-            max-width: 100%;
-            height: 100%;
+            max-width: 1366px;
+            height: 150px;
             margin: auto;
             
          }
