--- a/formatstyles.css
+++ b/formatstyles.css
@@ -4,11 +4,16 @@
 
 
 
-#banner{width: 100%;margin: auto;position: relative;}
+#banner{
+  width: 100%;
+  margin: auto;
+  position: relative;
+  background: #333333;
+}
 
 
 #wrapper {
- background: white;
+ background: #333333;
  width: 100%;
  margin: auto;
 position: relative;
@@ -111,7 +116,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #000000;
 }
 
 li {
@@ -130,6 +135,9 @@ li a:hover {
     background-color: #111;
 }
 
+.temp {
+  background-color: #333; 
+}
 
 }
 .container {
