--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,7 +1,7 @@
 <style type ="text/css">
 
 
-
+#banner{width: 100%;margin: auto;position: relative;}
 
 #wrapper {
  background: white;
@@ -16,8 +16,8 @@ table{border:2px solid black;}
          body { background-color: black; }
          body {font-size: 100%;}
          img {
-            max-width: 1366px;
-            height: 150px;
+            max-width: auto;
+            height: auto;
             margin: auto;
             
          }
@@ -80,4 +80,32 @@ li a {
 li a:hover {
     background-color: #111;
 }
-
+h2{
+    position:absolute;
+    top:400px;
+    left: 0;
+    width:100%;
+    
+}
+h2 span{
+    color: white; 
+   font: bold 45px/86px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+   text-align:center;
+   ;
+}
+h2 span.spacer{
+    padding: 0 5px;
+    width:auto;
+   height:auto;
+}
+ #footer {
+    clear:both;
+    height: 35px;
+    background-color: white;
+    border-top: 3px solid black;
+    text-align: center;
+ }
