--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -17,7 +17,7 @@ table{border:2px solid black;}
          body {font-size: 100%;}
          img {
             max-width: auto;
-            height: auto;
+            height: 100px;
             margin: auto;
             
          }
