--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -16,8 +16,8 @@ table{border:2px solid black;}
          body { background-color: black; }
          body {font-size: 100%;}
          img {
-            max-width: auto;
-            height: 100px;
+            max-width: 100%;
+            height: auto;
             margin: auto;
             
          }
@@ -84,7 +84,7 @@ h2{
     position:absolute;
     top:400px;
     left: 0;
-    width:100%;
+    width:50%;
     
 }
 h2 span{
@@ -109,3 +109,12 @@ h2 span.spacer{
     border-top: 3px solid black;
     text-align: center;
  }
+.movie-button {
+    float:right;
+    height: auto;
+    color:white;
+    padding:100px;
+    text-align:center;
+
+
+}
