--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,7 +140,7 @@ div, textarea, input {
   max-width: 510px;
   min-width: 324px;
   margin: 50px auto 0px;
-  background-color: $white;
+  background-color: $black;
   border: 1px solid lighten($grey, 1%); 
   border-bottom: 3px solid $grey;
 }
@@ -319,16 +319,10 @@ form {
 /* Catalogue page gallery formatting*/
 #banner{width: 100%;margin: auto;position: relative;}
 .Venues_gallery{float: center;margin: 0 auto;width: 1366px;list-style: none;}
-.Venues_gallery li{float: center;width: 500px;margin-right: 50px;margin-bottom: 10px;margin-top: 10px;margin-left: 10px;border: 2px solid white;}
-.Venues_gallery li img{width: 500px;height: 400px;float: center;border: 1px solid white;}
+.Venues_gallery li{float: center;width: 400px;margin-right: 50px;margin-bottom: 10px;margin-top: 10px;margin-left: 10px;border: 2px solid white;padding:10px;}
+.Venues_gallery li img{width: 400px;height: 300px;float: center;border: 1px solid white;}
 .Venues_title p{font: bold 18px/18px Helvetica, Sans-Serif;text-align: center;vertical-align: middle;color: red;margin: 5px}
 .Venues_links a{border: 1px solid white;text-decoration: underline;}
 .catalogue_title h1{font: bold 30px/30px Helvetica, Sans-Serif;color: white;}
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> origin/master
-=======
->>>>>>> origin/master
-=======
->>>>>>> origin/master
+
 
