--- a/formatstyles.css
+++ b/formatstyles.css
@@ -92,7 +92,7 @@ h2 span.spacer{
 
 li {
     float: left
-    font: bold 45px/86px Helvetica, Sans-Serif; 
+    font: bold 45px/86px Helvetica, Sans-Serif,white; 
 }
 
 li a {
