--- a/login-style.css
+++ b/login-style.css
@@ -25,6 +25,7 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  
 }
 .form button {
   font-family: "Roboto", sans-serif;
@@ -33,6 +34,7 @@
   background: #03185B;
   width: 100%;
   border: 0;
+  color:white;
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
@@ -95,6 +97,11 @@ body {
   background: -o-linear-gradient(right, #000000, #000000);
   background: linear-gradient(to left, #000000, #000000);
   font-family: "Roboto", sans-serif;
+  font-color:white;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;     
+
+}
+label{
+  background-color:black;color:white;
 }
